Added buttons to start/stop charging, renamed charger to chargPoint internally, Added more endpoints to CloudChargeApiClient.

--- a/custom_components/defa_power/translations/en.json
+++ b/custom_components/defa_power/translations/en.json
@@ -167,6 +167,14 @@
             "defa_power_firmware_version": {
                 "name": "Firmware version"
             }
+        },
+        "button": {
+            "defa_power_start_charging": {
+                "name": "Start charging"
+            },
+            "defa_power_stop_charging": {
+                "name": "Stop charging"
+            }
         }
     }
 }
