--- a/custom_components/defa_power/translations/sv.json
+++ b/custom_components/defa_power/translations/sv.json
@@ -167,6 +167,14 @@
             "defa_power_firmware_version": {
                 "name": "Firmware-version"
             }
+        },
+        "button": {
+            "defa_power_start_charging": {
+                "name": "Starta laddning"
+            },
+            "defa_power_stop_charging": {
+                "name": "Stoppa laddning"
+            }
         }
     }
 }
